all buttons to shift pages work ok. battle sequence needs fixing. the enemy will attack cummulatively

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 
-.choosePokemonPage {
+.professorOaksLab {
     background-image: url('images/pokemon-professor-oak-facts-trivia.jpg');
     opacity: 0.5;
     background-repeat: no-repeat, repeat;
@@ -120,7 +120,7 @@
 
 /*//////////////////////////////////////////////////// BUTTONS ///////////////////////////////////////// */
 
- .mainPageButton { 
+.mainPageButton { 
     background-color: yellow;
     border: none;
     color: black;
@@ -133,10 +133,20 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-  }
+}
 
+.exitLab {
+    background-color: yellow;
+    border: none;
+    color: black;
+    width: 100px;
+    height: 100px;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 
-  .enterTown {
+.enterTown {
     background-color: yellow;
     border: none;
     color: black;
@@ -148,6 +158,17 @@
 }
 
 .explore {
+    background-color: yellow;
+    border: none;
+    color: black;
+    width: 100px;
+    height: 100px;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.enterLab {
     background-color: yellow;
     border: none;
     color: black;
@@ -257,7 +278,7 @@
     cursor: pointer;
 }
 
-.journey {
+.enterCave {
     background-color: yellow;
     border: none;
     color: black;
@@ -268,7 +289,7 @@
     cursor: pointer;
 }
 
-.journey {
+.caveToForest {
     background-color: yellow;
     border: none;
     color: black;
@@ -278,6 +299,30 @@
     margin: 4px 2px;
     cursor: pointer;
 }
+
+.caveToDeepCave {
+    background-color: yellow;
+    border: none;
+    color: black;
+    width: 100px;
+    height: 100px;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.deepCaveToCave {
+    background-color: yellow;
+    border: none;
+    color: black;
+    width: 100px;
+    height: 100px;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+
 
 
 /*//////////////////////////////////////////////////// BUTTONS //////////////////////////////////////////// */
